--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: "jdbc:mysql://localhost:3306/happy?autoReconnect=true&useUnicode=true&serverTimezone=Asia/Seoul&characterEncoding=utf8"
-    username: root
-    password: Ballbot3451!
+    url: "jdbc:mysql://43.201.37.133:3306/DB202011966?autoReconnect=true&useUnicode=true&serverTimezone=Asia/Seoul&characterEncoding=utf8"
+    username: user202011966
+    password: !mynameis202011966
   jpa:
     database: mysql
     hibernate:
