--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: "jdbc:mysql://43.201.37.133:3306/DB202011966?autoReconnect=true&useUnicode=true&serverTimezone=Asia/Seoul&characterEncoding=utf8"
     username: user202011966
-    password: !mynameis202011966
+    password: "!mynameis202011966"
   jpa:
     database: mysql
     hibernate:
